[gd_scene load_steps=4 format=3 uid="uid://c8q4x7m2k3p6"]

[ext_resource type="Script" path="res://scripts/battlescape/minimap_manager.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/minimap_unit_icon.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://minimap_background" path="res://assets/minimap/background.png" id="3"]

[node name="Minimap" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 200.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(200, 200)

[node name="Camera2D" type="Camera2D" parent="SubViewport"]
position_smoothing_enabled = true
position_smoothing_speed = 5.0

[node name="UnitContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FogContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OverlayContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ZoomControls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 10.0
offset_right = 190.0
offset_bottom = 50.0

[node name="ZoomInButton" type="Button" parent="ZoomControls"]
layout_mode = 2
text = "+"

[node name="ZoomOutButton" type="Button" parent="ZoomControls"]
layout_mode = 2
text = "-"

[node name="Legend" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 80.0

[node name="PlayerUnitsLabel" type="Label" parent="Legend"]
layout_mode = 2
text = "● Player"
horizontal_alignment = 1

[node name="EnemyUnitsLabel" type="Label" parent="Legend"]
layout_mode = 2
text = "● Enemy"
horizontal_alignment = 1

[node name="ObjectiveLabel" type="Label" parent="Legend"]
layout_mode = 2
text = "● Objective"
horizontal_alignment = 1

[node name="TacticalInfo" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 160.0
offset_right = 100.0
offset_bottom = 190.0

[node name="TurnLabel" type="Label" parent="TacticalInfo"]
layout_mode = 2
text = "Turn: 1"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="TacticalInfo"]
layout_mode = 2
text = "14:32"
horizontal_alignment = 1

[node name="UnitIconTemplate" parent="." instance=ExtResource("2")]
visible = false
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0

[connection signal="pressed" from="ZoomControls/ZoomInButton" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="ZoomControls/ZoomOutButton" to="." method="_on_zoom_out_pressed"]

[node name="ZoomOutButton" type="Button" parent="ZoomControls"]
layout_mode = 0
offset_left = 5.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 35.0
text = "-"

[node name="Legend" type="Control" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 85.0
offset_right = 80.0
offset_bottom = 110.0

[node name="PlayerIcon" type="ColorRect" parent="Legend"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0, 0, 1, 1)

[node name="PlayerLabel" type="Label" parent="Legend"]
layout_mode = 0
offset_left = 15.0
offset_top = 2.0
offset_right = 50.0
offset_bottom = 13.0
text = "Player"
theme_override_font_sizes/font_size = 10

[node name="EnemyIcon" type="ColorRect" parent="Legend"]
layout_mode = 0
offset_left = 5.0
offset_top = 15.0
offset_right = 10.0
offset_bottom = 20.0
color = Color(1, 0, 0, 1)

[node name="EnemyLabel" type="Label" parent="Legend"]
layout_mode = 0
offset_left = 15.0
offset_top = 12.0
offset_right = 50.0
offset_bottom = 23.0
text = "Enemy"
theme_override_font_sizes/font_size = 10

[node name="UnitIconTemplate" parent="." instance=ExtResource("2")]
visible = false
layout_mode = 0
offset_right = 12.0
offset_bottom = 12.0
